Styling and javascript logic

--- a/shop.html
+++ b/shop.html
@@ -15,8 +15,8 @@
 
             <div>
                 <ul id="navbar">
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active" href="shop.html">Shop</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
@@ -29,42 +29,21 @@
             </div>
         </section>
 
-        <section id="hero">
+        <section id="page-header">
             <h2>
-                <span>Creating Tomorrow's </span>
-                <span>Water Solutions Today</span>
+                <span>Transforming Water</span>
+                <span>Transforming Lives</span>
             </h2>
-            <button>Shop Now</button>
 
         </section>
 
-        <section id="feature" class="section-p1">
-            <div class="feature-box">
-                <img src="img/install.jpg" alt="">
-                <h6>Free Installation Within Nairobi</h6>
-            </div>
-            <div class="feature-box">
-                <img src="img/support.png" alt="">
-                <h6>24/7 Support</h6>
-            </div>   
-            <div class="feature-box">
-                <img src="img/save money.png" alt="">
-                <h6>Save Money</h6>
-            </div>  
-            <div class="feature-box">
-                <img src="img/delivery1.png" alt="">
-                <h6>VAT Inclusive</h6>
-            </div>
-            </section>
-
         <section id="product1" class="section-p1">
-            <h2>Featured Products</h2>
             <div class="pro-container">
-                <div class="pro">
+                <div class="pro" onclick="window.location.href='singleproduct.html';">
                     <img src="img/ro 400.jpeg" alt="">
                     <div class="pro-info">
                         <H4>RO-400</H4>
-                        <h3>44,000KES</h3>
+                        <h3>44,000 KES</h3>
                     </div>
                     <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
                 </div>
@@ -72,26 +51,59 @@
                     <img src="img/3000 B.webp" alt="">
                     <div class="pro-info">
                         <H4>RO-SY3</H4>
-                        <h3>160,000KES</h3>
+                        <h3>160,000 KES</h3>
                     </div>
                     <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
-                </div><div class="pro">
+                </div>
+                <div class="pro">
                     <img src="img/400.webp" alt="">
                     <div class="pro-info">
                         <H4>3000L/H</H4>
-                        <h3>29,000KES</h3>
+                        <h3>29,000 KES</h3>
                     </div>
                     <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
-                </div><div class="pro">
+                </div>
+                <div class="pro">
                     <img src="img/8000.webp" alt="">
                     <div class="pro-info">
                         <H4>8000L/H</H4>
-                        <h3>49,000KES</h3>
+                        <h3>49,000 KES</h3>
+                    </div>
+                    <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
+                </div>
+                <div class="pro">
+                    <img src="img/filter.jpg" alt="">
+                    <div class="pro-info">
+                        <H4>RO-400 Filter</H4>
+                        <h3>6000 KES</h3>
+                    </div>
+                    <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
+                </div>
+                <div class="pro">
+                    <img src="img/filter1.jpg" alt="">
+                    <div class="pro-info">
+                        <H4>RO-SY3 Filter</H4>
+                        <h3>15,000 KES</h3>
+                    </div>
+                    <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
+                </div>
+                <div class="pro">
+                    <img src="img/filter4.jpg" alt="">
+                    <div class="pro-info">
+                        <H4>3000L/H Filter</H4>
+                        <h3>12,000 KES</h3>
+                    </div>
+                    <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
+                </div>
+                <div class="pro">
+                    <img src="img/filter3.jpg" alt="">
+                    <div class="pro-info">
+                        <H4>8000L/H Filter</H4>
+                        <h3>25,000 KES</h3>
                     </div>
                     <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
                 </div>
             </div>
-            
         </section>
 
         <footer class="section-p1">
@@ -112,6 +124,6 @@
                 </div>
         </footer>
         
-    <script src="script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
