--- a/singleproduct.html
+++ b/singleproduct.html
@@ -15,8 +15,8 @@
 
             <div>
                 <ul id="navbar">
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active" href="shop.html">Shop</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
@@ -29,33 +29,36 @@
             </div>
         </section>
 
-        <section id="hero">
-            <h2>
-                <span>Creating Tomorrow's </span>
-                <span>Water Solutions Today</span>
-            </h2>
-            <button>Shop Now</button>
+        <section id="prodetails" class="section-p1">
+            <div class="single-pro-image">
+                <img src="img/8000.webp"  width="100%" id="MainImg" alt="">
 
+                <div class="small-img-group">
+                    <div class="small-img-col">
+                        <img src="img/8000.webp" width="100%" class="small-img" alt="">
+                    </div>
+                    <div class="small-img-col">
+                        <img src="img/3000.jpeg" width="100%" class="small-img" alt="">
+                    </div>
+                    <div class="small-img-col">
+                        <img src="img/8000.webp" width="100%" class="small-img" alt="">
+                    </div>
+                    <div class="small-img-col">
+                        <img src="img/3000.jpeg" width="100%" class="small-img" alt="">
+                </div>
+            </div> 
+        </div>
+            
+        <div class="single-pro-details">
+            <h6>RO-400</h6>
+            <h4>Under The Sink Water Filter</h4>
+            <h2>39,000 KES</h2>``
+            <input type="number" value="1"> 
+            <button class="normal">Add To Cart</button>
+            <h4>Product Details</h4>
+            <span>RO-400 is a high-capacity, low-cost system that is suitable for commercial and residential applications. It can be used in offices, small factories, manufacturing, restaurants, food processing industries, shopping centers, schools, and hotels.RO-400 systems can remove up to 99.9% of salts and contaminants from different water sources, including municipal, brackish, and surface water. They can block bacteria, particles, sugars, proteins, dyes, and impurities that have a molecular weight of more than 150-250 Dalton.</span>
+        </div>
         </section>
-
-        <section id="feature" class="section-p1">
-            <div class="feature-box">
-                <img src="img/install.jpg" alt="">
-                <h6>Free Installation Within Nairobi</h6>
-            </div>
-            <div class="feature-box">
-                <img src="img/support.png" alt="">
-                <h6>24/7 Support</h6>
-            </div>   
-            <div class="feature-box">
-                <img src="img/save money.png" alt="">
-                <h6>Save Money</h6>
-            </div>  
-            <div class="feature-box">
-                <img src="img/delivery1.png" alt="">
-                <h6>VAT Inclusive</h6>
-            </div>
-            </section>
 
         <section id="product1" class="section-p1">
             <h2>Featured Products</h2>
@@ -111,7 +114,25 @@
                     <a href="#">Contact Us</a>
                 </div>
         </footer>
+
+        <script>
+            var MainImg = document.getElementById("MainImg");
+            var smallimg = document.getElementsByClassName("small-img");
+
+            smallimg[0].onclick = function() {
+                MainImg.src = smallimg[0].src;
+            }
+            smallimg[1].onclick = function() {
+                MainImg.src = smallimg[1].src;
+            }
+            smallimg[2].onclick = function() {
+                MainImg.src = smallimg[2].src;
+            }
+            smallimg[3].onclick = function() {
+                MainImg.src = smallimg[3].src;
+            }
+        </script>
         
-    <script src="script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
