contact us and cart page and styling

--- a/cart.html
+++ b/cart.html
@@ -17,9 +17,9 @@
                 <ul id="navbar">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="shop.html">Shop</a></li>
-                    <li><a class="active" href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a  href="contact.html">Contact Us</a></li>
+                    <li id="lg-bag"><a class="active" href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
                     <a href="#" id="close"><i class="fas fa-times"></i></a></li>
                 </ul>
             </div>
@@ -29,17 +29,47 @@
             </div>
         </section>
 
-        <section id="hero-about">
-          
-                <h2>Get To Know Us</h2>
-
+        <section id="hero">
+            <div class="title">
+                <h2>Thanks for shopping with us</h2>
+            </div>
         </section>
 
-        <section id="about-head" class="section-p1">
-            <img src="img/about.png" alt="">
-            <div>
-                <h2>About Us</h2>
-                <p>Lingrun is a leading provider of high-quality, low-cost water treatment solutions. We offer a wide range of products and services to meet your needs. At Lingrun, we elevate your water quality with our cutting-edge reverse osmosis filtration systems. As a company, we specialize in delivering high-capacity and cost-effective solutions for residential and commercial needs. Our commitment to excellence ensures pure, contaminant-free water, promoting health and well-being.</p>
+        <section id="cart" class="section-p1">
+            <table width="100%">
+                <thead>
+                    <tr>
+                        <td>Remove</td>
+                        <td>Image</td>
+                        <td>product</td>
+                        <td>Quantity</td>
+                        <td>Total</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a href="#"><i class="far fa-times-circle"></i></a></td>
+                        <td><img src="img/8000.webp" alt=""></td>
+                        <td>49,000 KES</td>
+                        <td><input type="number" value="1"></td>
+                        <td>49,000 KES</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+        <section id="total" class="section-p1">
+            <div id="subtotal">
+                <table>
+                    <tr>
+                        <td>Subtotal</td>
+                        <td>49,000 KES</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Total</strong></td>
+                        <td><strong>49,000 KES</strong></td>
+                    </tr>
+                </table>
             </div>
         </section>
 
@@ -48,7 +78,7 @@
             <div class="col">
                 <h4>Contact</h4>
                 <p><strong>Address:</strong> Suite 12 GreenHouse, Ngong Road, Nairobi, Kenya</p>
-                <p><strong>Phone:</strong> +254 700-288-222 / +254 707-073-645</p>
+                <p><strong>Phone:</strong> +254 723-033-011 / +254 707-073-645</p>
                 <p><strong>Hours:</strong> Mon - Sat 09:00 - 17:00</p>
             </div>
 
