--- a/contact.html
+++ b/contact.html
@@ -29,14 +29,14 @@
             </div>
         </section>
 
-        <section id="contact-head" class="section-p1">
-            <img src="img/contact.us.jpg" alt="">
-          
+        <section id="hero-contact">
+            <div class="title">
+                <h2>Visit us at greenhouse or contact us today</h2>
+            </div>
         </section>
 
         <section id="contact-details" class="section-p1">
             <div class="details">
-                <h2>Visit us at greenhouse or contact us today</h2>
                 <h3>Head Office</h3>
                 <div>
                     <li>
@@ -83,7 +83,7 @@
             <div class="col">
                 <h4>Contact</h4>
                 <p><strong>Address:</strong> Suite 12 GreenHouse, Ngong Road, Nairobi, Kenya</p>
-                <p><strong>Phone:</strong> +254 723-033-011 / +254 707-073-645</p>
+                <p><strong>Phone:</strong> +254 700-288-222 / +254 707-073-645</p>
                 <p><strong>Hours:</strong> Mon - Sat 09:00 - 17:00</p>
             </div>
 
