--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </section>
 
-        <section id="hero">
+        <section id="hero-1">
             <h2>
                 <span>Creating Tomorrow's </span>
                 <span>Water Solutions Today</span>
@@ -99,7 +99,7 @@
             <div class="col">
                 <h4>Contact</h4>
                 <p><strong>Address:</strong> Suite 12 GreenHouse, Ngong Road, Nairobi, Kenya</p>
-                <p><strong>Phone:</strong> +254 723-033-011 / +254 707-073-645</p>
+                <p><strong>Phone:</strong> +254 700-288-222 / +254 707-073-645</p>
                 <p><strong>Hours:</strong> Mon - Sat 09:00 - 17:00</p>
             </div>
 
