--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lingrun</title>
+    <title>WEI MEI</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
         <section id="header">
-            <a href="#"><img src="img/logo.7.png" class="logo" alt=""></a>
+            <a href="#"><img src="img/logo.png" class="logo" alt=""></a>
 
             <div>
                 <ul id="navbar">
                     <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
                     <a href="#" id="close"><i class="fas fa-times"></i></a></li>
                 </ul>
             </div>
@@ -34,8 +33,6 @@
                 <span>Creating Tomorrow's </span>
                 <span>Water Solutions Today</span>
             </h2>
-            <button>Shop Now</button>
-
         </section>
 
         <section id="feature" class="section-p1">
@@ -52,50 +49,43 @@
                 <h6>Save Money</h6>
             </div>  
             <div class="feature-box">
-                <img src="img/delivery1.png" alt="">
-                <h6>VAT Inclusive</h6>
+                <img src="img/delivery.png" alt="">
+                <h6>Fast Delivery</h6>
             </div>
         </section>
 
         <section id="product1" class="section-p1">
             <h2>Featured Products</h2>
             <div class="pro-container">
-                <div class="pro">
-                    <img src="img/ro 400.jpeg" alt="">
+                    <div class="pro" onclick="window.location.href='singleproduct_ro400.html';">
+                    <img src="img/under the sink.jpg" alt="">
                     <div class="pro-info">
                         <H4>RO-400</H4>
-                        <h3>44,000KES</h3>
                     </div>
-                    <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
                 </div>
-                <div class="pro">
-                    <img src="img/3000 B.webp" alt="">
+                <div class="pro" onclick="window.location.href='singleproduct_rosy3.html';">
+                    <img src="img/whole house.jpg" alt="">
                     <div class="pro-info">
                         <H4>RO-SY3</H4>
-                        <h3>160,000KES</h3>
                     </div>
-                    <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
-                </div><div class="pro">
-                    <img src="img/400.webp" alt="">
-                    <div class="pro-info">
-                        <H4>3000L/H</H4>
-                        <h3>29,000KES</h3>
-                    </div>
-                    <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
-                </div><div class="pro">
-                    <img src="img/8000.webp" alt="">
-                    <div class="pro-info">
-                        <H4>8000L/H</H4>
-                        <h3>49,000KES</h3>
-                    </div>
-                    <a href="#"><i class="fas fa-shopping-cart cart"></i></a> 
                 </div>
-            </div>
-            
+                <div class="pro" onclick="window.location.href='singleproduct_500lh.html';">
+                    <img src="img/esate.1.png" height="85%" alt="">
+                    <div class="pro-info">
+                        <H4>500L/H</H4>
+                    </div>
+                </div>
+                <div class="pro" onclick="window.location.href='singleproduct_130lh.html';">
+                    <img src="img/water dispenser.jpg" height="85%" alt="">
+                    <div class="pro-info">
+                        <H4>130L/H</H4>
+                    </div>
+                </div>
+            </div> 
         </section>
 
         <footer class="section-p1">
-            <img class="logo" src="img/logo.7.png" alt="">
+            <img class="logo" src="img/logo.png" alt="">
             <div class="col">
                 <h4>Contact</h4>
                 <p><strong>Address:</strong> Suite 12 GreenHouse, Ngong Road, Nairobi, Kenya</p>
@@ -105,10 +95,8 @@
 
                 <div class="col">
                     <h4>About</h4>
-                    <a href="#">About Us</a>
-                    <a href="#">Delivery Information</a>
-                    <a href="#">Terms & Conditions</a>
-                    <a href="#">Contact Us</a>
+                    <a href="about.html">About Us</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
         </footer>
         
