--- a/about.html
+++ b/about.html
@@ -5,21 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lingrun</title>
+    <title>WEI MEI</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
         <section id="header">
-            <a href="#"><img src="img/logo.7.png" class="logo" alt=""></a>
+            <a href="#"><img src="img/logo.png" class="logo" alt=""></a>
 
             <div>
                 <ul id="navbar">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a class="active" href="about.html">About</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li id="lg-bag"><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
                     <a href="#" id="close"><i class="fas fa-times"></i></a></li>
                 </ul>
             </div>
@@ -42,9 +41,9 @@
                 <p>Lingrun is a leading provider of high-quality, low-cost water treatment solutions. We offer a wide range of products and services to meet your needs. At Lingrun, we elevate your water quality with our cutting-edge reverse osmosis filtration systems. As a company, we specialize in delivering high-capacity and cost-effective solutions for residential and commercial needs. Our commitment to excellence ensures pure, contaminant-free water, promoting health and well-being.</p>
             </div>
         </section>
-
+      
         <footer class="section-p1">
-            <img class="logo" src="img/logo.7.png" alt="">
+            <img class="logo" src="img/logo.png" alt="">
             <div class="col">
                 <h4>Contact</h4>
                 <p><strong>Address:</strong> Suite 12 GreenHouse, Ngong Road, Nairobi, Kenya</p>
@@ -54,10 +53,8 @@
 
                 <div class="col">
                     <h4>About</h4>
-                    <a href="#">About Us</a>
-                    <a href="#">Delivery Information</a>
-                    <a href="#">Terms & Conditions</a>
-                    <a href="#">Contact Us</a>
+                    <a href="about.html">About Us</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
         </footer>
         
