bugs and updates

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
             <img src="img/about.png" alt="">
             <div>
                 <h2>About Us</h2>
-                <p>Lingrun is a leading provider of high-quality, low-cost water treatment solutions. We offer a wide range of products and services to meet your needs. At Lingrun, we elevate your water quality with our cutting-edge reverse osmosis filtration systems. As a company, we specialize in delivering high-capacity and cost-effective solutions for residential and commercial needs. Our commitment to excellence ensures pure, contaminant-free water, promoting health and well-being.</p>
+                <p>WeiMei is a leading provider of high-quality, low-cost water treatment solutions. We offer a wide range of products and services to meet your needs. At WeiMei, we elevate your water quality with our cutting-edge reverse osmosis filtration systems. As a company, we specialize in delivering high-capacity and cost-effective solutions for residential and commercial needs. Our commitment to excellence ensures pure, contaminant-free water, promoting health and well-being.</p>
             </div>
         </section>
       
