--- a/products.html
+++ b/products.html
@@ -28,16 +28,22 @@
             </div>
         </section>
 
+        <section id = "hero1">
+            <div class="hero1">
+            </div>
+        </section>
+
         <section id = "hero-2">
             <div class="hero2">
+                <h2>Our Products</h2>
                 <video autoplay loop muted plays-inline>
                     <source src="img/UF video.mp4">
                 </video>
+                <p class="UF">Introducing our revolutionary ultrafiltration system. This innovative filtration technology operates entirely without the need for electricity, making it an eco-friendly and cost-effective solution for water purification. Designed with sustainability in mind, the Ultrafiltration system utilizes advanced membrane filtration to effectively remove impurities, bacteria, and contaminants from water, ensuring pristine and safe drinking water without any water wastage. With a filtration capacity of 3000 liters per hour and 8000 liters per hour, this system is ideal for both residential and commercial applications, providing ample purified water for households, businesses, and communities while minimizing environmental impact.</p>
             </div>
         </section>
           
         <section id="product1" class="section-p1">
-            <h2>Our Products</h2>
             <div class="pro-container">
                     <div class="pro" onclick="window.location.href='singleproduct_ro400.html';">
                     <img src="img/under the sink.jpg" alt="">
