--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 <div>
                     <li>
                         <i class="fas fa-map"></i>
-                        <p>Suite 12 GreenHouse Ngong Road Nairobi</p>
+                        <p>Suite 12, GreenHouse, Ngong Road, Nairobi,Kenya</p>
                     </li>
                     <li>
                         <i class="far fa-envelope"></i>
